--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" type="text/css" href="./resouces/css/bulma.css" />
         <link rel="stylesheet" type="text/css" href="./resouces/css/bulma.min.css" />
         <!-- <script src="./resouces/scripts/jQuery-3.4.1.js"> </script>  -->
-        <script src="./resouces/scripts/index.js"> </script>
+        <!-- <script src="./resouces/scripts/index.js"> </script> -->
+        <script src="content.js" > </script>
     </head>
     
     <body>
@@ -61,7 +62,7 @@
         <footer> 
             <div id="footer"> 
                 <span>
-                    <a href="#" id="open-sheets" onclick="handleSheetsLink()" target="_blank">
+                    <a href="#" id="open-sheets" target="_blank">
                         <img src="./resouces/images/google-sheets icon.png" id="image" />
                         <span class="link-text"> Open Google Sheets </span>
                     </a>
