--- a/production/new.html
+++ b/production/new.html
@@ -26,9 +26,9 @@
                 <br />
 
                 <div class="panel">
-                    <input type="text" id="sheet-url" value="" placeholder="Paste link to your sheet" />
+                    <input type="text" id="display-url" value="" placeholder="Paste link to your sheet" />
+                    <button type="button" id="sheet-url"> Save</button>
                 </div>
-                <label> <b class="message" id="typed-url"> </b></label>
             </form>
         </div>
     </div>
